examples/test/testpolicy9456.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9456
  namespace: namespace216
spec:
  podSelector:
    matchLabels:
      key6: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value7
          key27: value31
          key12: value29
      podSelector:
        matchLabels:
          key14: value32
